# Parallel-Corner-Detection

./: .gitignore  CMakeLists.txt  Makefile  config.h  cpuParallelCornerDetection.cpp  harrisCorner.cu  harrisCornerMain.cpp  index.md  parallel  serialCornerDetection.cpp
